--- a/Tcm.Interface.WebUi/package.json
+++ b/Tcm.Interface.WebUi/package.json
@@ -29,7 +29,9 @@
     "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "^7.1.4",
     "@angular/router": "^7.1.4",
+    "@auth0/angular-jwt": "^2.1.0",
     "@fortawesome/fontawesome-free": "^5.5.0",
+    "angular": "^1.7.5",
     "babel-polyfill": "^6.23.0",
     "bootstrap": "^4.1.3",
     "compile-run": "^2.1.4",
@@ -38,7 +40,6 @@
     "m": "^1.5.1",
     "node-sass": "^4.10.0",
     "npm-watch": "^0.4.0",
-    "oidc-client": "^1.3.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
     "tslib": "^1.9.0",
