add identitydbcontext and oauth to tcm.interface.api

--- a/Tcm.Interface.Api/appsettings.json
+++ b/Tcm.Interface.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "TransportCentralizedManagementConnection": "Data Source=.\\sql2017;Initial Catalog=TCM;Persist Security Info=True;Integrated Security=True;MultipleActiveResultSets=true"
+    "TransportCentralizedManagementConnection": "Data Source=.;Initial Catalog=TCMBeta;Persist Security Info=True;Integrated Security=True;MultipleActiveResultSets=true"
 
   },
   "MongoSetting": {
