--- a/Tcm.Interface.WebUi/angular.json
+++ b/Tcm.Interface.WebUi/angular.json
@@ -9,13 +9,10 @@
       "projectType": "application",
       "prefix": "app",
       "schematics": {},
-     
       "architect": {
         "build": {
-          
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-         
             "outputPath": "wwwroot",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -26,12 +23,22 @@
               "src/assets"
             ],
             "styles": [
-         
               "src/theme.scss",
-              "src/styles.css"
+              "src/styles.css",
 
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/typeface-exo/index.css",
+              "node_modules/ionicons/scss/ionicons.scss",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "node_modules/socicon/css/socicon.css",
+              "node_modules/nebular-icons/scss/nebular-icons.scss",
+              "node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
+              "node_modules/leaflet/dist/leaflet.css",
+              "src/app/theme/styles/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/pace-js/pace.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -50,7 +57,6 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
-
             }
           }
         },
@@ -81,10 +87,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [             
-         
-              
-            ],
+            "scripts": [],
             "assets": [
               "src/favicon.ico",
               "src/assets"
