--- a/Tcm.Interface.WebUi/package.json
+++ b/Tcm.Interface.WebUi/package.json
@@ -31,18 +31,30 @@
     "@angular/router": "^7.1.4",
     "@auth0/angular-jwt": "^2.1.0",
     "@fortawesome/fontawesome-free": "^5.5.0",
+    "@nebular/auth": "^3.1.0",
+    "@nebular/bootstrap": "^3.1.0",
+    "@nebular/security": "^3.1.0",
+    "@nebular/theme": "^3.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "angular": "^1.7.5",
     "babel-polyfill": "^6.23.0",
     "bootstrap": "^4.1.3",
     "compile-run": "^2.1.4",
     "core-js": "^2.5.4",
+    "eva-icons": "^1.1.1",
+    "ionicons": "^2.0.1",
     "jquery": "^3.3.1",
+    "leaflet": "^1.4.0",
     "m": "^1.5.1",
+    "nebular-icons": "^1.1.0",
     "node-sass": "^4.10.0",
     "npm-watch": "^0.4.0",
+    "pace-js": "^1.0.2",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
+    "socicon": "^3.0.5",
     "tslib": "^1.9.0",
+    "typeface-exo": "0.0.61",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
