--- a/Framework.Authentication/Framework.Authentication.csproj
+++ b/Framework.Authentication/Framework.Authentication.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Framework.Core\Framework.Core.csproj" />
-    <ProjectReference Include="..\Tcm.Domain\Tcm.Domain.csproj" />
+    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.2" />
   </ItemGroup>
 
 </Project>
