create token provider api/account/Login

--- a/Tcm.Interface.Api/appsettings.json
+++ b/Tcm.Interface.Api/appsettings.json
@@ -1,11 +1,16 @@
 {
   "ConnectionStrings": {
-    "TransportCentralizedManagementConnection": "Data Source=.;Initial Catalog=TCMBeta;Persist Security Info=True;Integrated Security=True;MultipleActiveResultSets=true"
+    "TransportCentralizedManagementConnection": "Data Source=.\\SQLSERVER14;Initial Catalog=TCMBeta;Persist Security Info=True;Integrated Security=True;MultipleActiveResultSets=true"
 
   },
   "MongoSetting": {
     "serverUrl": "mongodb://127.0.0.1:27017",
     "databaseName": "CDADB"
 
-  }
+  },
+
+  "JwtKey": "123ga.jkrb;JVN'knv/LRARHGA;ERHG/sdkv'ah;arhalerba;rjg'arjgsrtkhgsdbvzdfjalrlaer",
+  "JwtIssuer": "http://localhost:5003",
+  "JwtExpireDays": 30
+
 }
