--- a/Tcm.Interface.WebUi/package.json
+++ b/Tcm.Interface.WebUi/package.json
@@ -36,6 +36,7 @@
     "@nebular/security": "^3.1.0",
     "@nebular/theme": "^3.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "alertifyjs": "^1.11.1",
     "angular": "^1.7.5",
     "babel-polyfill": "^6.23.0",
     "bootstrap": "^4.1.3",
@@ -47,6 +48,7 @@
     "leaflet": "^1.4.0",
     "m": "^1.5.1",
     "nebular-icons": "^1.1.0",
+    "ngx-bootstrap": "^3.1.4",
     "node-sass": "^4.10.0",
     "npm-watch": "^0.4.0",
     "pace-js": "^1.0.2",
